Avances y correcciones en código backend e integración con Frontend (version 12)